--- a/src/App.css
+++ b/src/App.css
@@ -41,10 +41,18 @@ div{
   font-size: larger;
   text-align: center;
   margin-top: 50px;
+  color: black;
 }
 form, input{
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
+  padding: 10px;
+  margin: 10px;
   
+  
+}
+body{
+  background-color: burlywood;
 }
